<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/white"
       >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon_no_connection_available"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internet_not_connect_tex"
            android:gravity="center"
            android:textSize="@dimen/text_20" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Retry_to_connect"
            android:layout_marginTop="@dimen/dimen_5"/>
        <Button
            android:id="@+id/error_page_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Retry_button_text"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/dimen_40"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_connection_available"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/white">
        <ImageView
            android:id="@+id/ivnetwork"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon_connection_availalable"/>


        <TextView
            android:id="@+id/tvnetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_avail"
            android:layout_marginTop="@dimen/dimen_5"
            android:textSize="@dimen/text_20"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_connection_available_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@android:color/white">
            <ImageView
                android:id="@+id/ivbluenetwork"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_connection_availalable"/>

            <Switch
                android:id="@+id/sbluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvbluetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_avail_blue"
                android:layout_marginTop="@dimen/dimen_5"
                android:textSize="@dimen/text_20"/>

        </LinearLayout>

    </LinearLayout>
    <Button
        android:visibility="gone"
        android:id="@+id/btnExplicitBroadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Explicit Broadcast" />

</RelativeLayout>